--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <h1>Hello wolrd!</h1>
 <p>this is a new feature branch
     Lorem ipsum dolor sit.
-    Lorem ipsum dolor sit amet.
+    Lorem ipsum dolor sit amet
 </p>
